Fix padding and margins on footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,20 +1,20 @@
 <footer>
 	<div class="container-fluid">
 		<div class="row footer">
-			<div class="col-md-4">
-				<h3>AwenS.org</h3>
+			<div class="col-md-4 footercol">
+				<h3 class="footerhead">AwenS.org</h3>
                 <a href="/">Home</a>
 			</div>
-			<div class="col-md-4">
-				<h3 id="contact">Contact</h3>
+			<div class="col-md-4 footercol">
+				<h3 id="contact" class="footerhead">Contact</h3>
                 {% if site.github_username %}
                 <p>
                   {% include icon-github.html username=site.github_username %}
                 </p>
                 {% endif %}
 			</div>
-			<div class="col-md-4">
-				<h3>Acknowledgements</h3>
+			<div class="col-md-4 footercol">
+				<h3 class="footerhead">Acknowledgements</h3>
 				<p>Powered by <a href="https://getbootstrap.com/">Bootstrap</a> and <a href="http://jekyllrb.com/">Jekyll</a> </p>
 				<p>Font: Adobe Source Pro provided by <a href="https://www.google.com/fonts">Google Fonts</a></p>
 				<p>Jumbotron photo by Awen Saunders</p>
