--- a/css/main.scss
+++ b/css/main.scss
@@ -61,6 +61,12 @@ $on-laptop:        800px;
 
 .footer{
 	background-color: #f6f6f6;
-  padding: 1em;
+  padding: 0em 1em;
   border-top: 1px solid $grey-color-light;
+}
+.footercol{
+  margin: 0.5em 0em;
+}
+.footerhead{
+  margin: 0.5em 0em; 
 }
