Add syntax highlighting post. Add mathjax support.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,7 @@
 			</div>
 			<div class="col-md-4 footercol">
 				<h3 class="footerhead">Acknowledgements</h3>
+                <p>Hosted by <a href="https://pages.github.com/">GitHub Pages</p>
 				<p>Powered by <a href="https://getbootstrap.com/">Bootstrap</a> and <a href="http://jekyllrb.com/">Jekyll</a> </p>
 				<p>Font: Adobe Source Pro provided by <a href="https://www.google.com/fonts">Google Fonts</a></p>
 				<p>Jumbotron photo by Awen Saunders</p>
