Add glyphicons. Fix spacing. Wrote about me.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,9 @@
                   {% include icon-github.html username=site.github_username %}
                 </p>
                 {% endif %}
+                <p>
+                    <a href="mailto:awen@awens.org"><span class="icon glyphicon glyphicon-envelope" aria-hidden="true" id=emailicon></span> awen@awens.org</a>
+                </p>
 			</div>
 			<div class="col-md-4 footercol">
 				<h3 class="footerhead">Acknowledgements</h3>
