--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,8 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic&effect=3d-float);
 
 
-
+//My variables 
+$icon-color: #828282;
 // Our variables
 $base-font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
@@ -14,7 +15,7 @@ $base-font-weight: 300;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     20px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
@@ -72,4 +73,8 @@ $on-laptop:        800px;
 }
 #postcontainer{
   padding-top: 1em;
+}
+#emailicon{
+  color: $icon-color;
+  vertical-align: middle;
 }
