--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                           </button>
-                          <a class="navbar-brand" href="#">AwenS.org</a>
+                          <a class="navbar-brand" href="/">AwenS.org</a>
                     </div>
     			</div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
