--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@
 @charset "utf-8";
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic&effect=3d-float);
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:300);
 
 
 //My variables 
@@ -55,11 +56,13 @@ $on-laptop:        800px;
         "syntax-highlighting"
 ;
 
-
 .navbar{
   margin: 0px;
 }
-
+kbd,
+code{
+  font-family: 'Source Code Pro', monospace;;
+}
 .footer{
 	background-color: #f6f6f6;
   border-top: 1px solid $grey-color-light;
