--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row footer">
             <div class="col-md-4 footercol">
-                <h3 class="footerhead">AwenS.org</h3>
+                <h3 class="footerhead">awen.io</h3>
                 <a href="/">Home</a>
             </div>
             <div class="col-md-4 footercol">
@@ -18,7 +18,7 @@
                 </p>
                 {% endif %}
                 <p>
-                <a href="mailto:awen@awens.org"><span class="icon glyphicon glyphicon-envelope" aria-hidden="true" id=emailicon></span> awen@awens.org</a>
+                <a href="mailto:awen@awen.io"><span class="icon glyphicon glyphicon-envelope" aria-hidden="true" id=emailicon></span> awen@awen.io</a>
                 </p>
             </div>
             <div class="col-md-4 footercol">
