--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                           </button>
-                          <a class="navbar-brand" href="/">AwenS.org</a>
+				  <a class="navbar-brand" href="/"><img src="/resources/awen.io-logo/svg/color_logo_transparent.svg" alt="awen.io logo"></a>
                     </div>
     			</div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
