--- a/css/main.scss
+++ b/css/main.scss
@@ -3,14 +3,14 @@
 ---
 @charset "utf-8";
 
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic&effect=3d-float);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:300);
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400|Open+Sans:300,300i&effect=3d-float');
 
 
 //My variables 
 $icon-color: #828282;
 // Our variables
-$base-font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+$base-font-family: "Open Sans", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 300;
 $small-font-size:  $base-font-size * 0.875;
@@ -59,6 +59,10 @@ $on-laptop:        800px;
 .navbar{
   margin: 0px;
 }
+.navbar-default .navbar-nav li > a {
+  color: #523d4a;
+}
+
 kbd,
 code{
   font-family: 'Source Code Pro', monospace;;
@@ -79,4 +83,7 @@ code{
 #emailicon{
   color: $icon-color;
   vertical-align: middle;
+}
+h1, h2, h3, h4 {
+  font-family: 'Montserrat'
 }
