--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                 </p>
                 {% endif %}
                 <p>
-                <a href="mailto:awen@awen.io"><span class="icon glyphicon glyphicon-envelope" aria-hidden="true" id=emailicon></span> awen@awen.io</a>
+                <a href="mailto:me@awen.io"><span class="icon glyphicon glyphicon-envelope" aria-hidden="true" id=emailicon></span> me@awen.io</a>
                 </p>
             </div>
             <div class="col-md-4 footercol">
